<resources>
    <string name="app_name">RUCafeApp</string>
    <string name="all_orders">All Orders</string>
    <string name="current_orders_cart">Current Orders Cart</string>
    <string name="order_sandwiches">Order Sandwiches</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="ru_cafe">RU CAFE</string>
    <string name="ordering_coffee">ORDERING COFFEE</string>
    <string name="cup_sizes">Cup Sizes:</string>
    <string name="add_ins">Add-Ins:</string>
    <string name="quantity">Quantity:</string>
    <string name="selected_coffees">Selected Coffees:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="add_to_current_cart">Add to Current Cart</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="sub_total">Sub-Total:</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="remove_selected_item">Remove Selected Item</string>
    <string name="place_order">Place Order</string>
    <string name="order_number">Order Number #:</string>
    <string name="includes_tax">*includes tax</string>
    <string name="cancel_selected_order">Cancel Selected Order</string>
    <string name="short_size">Short</string>
    <string name="tall">Tall</string>
    <string name="grande">Grande</string>
    <string name="venti">Venti</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>
    <string name="add_to_cart">Add Order to Current Cart</string>
    <string name="subtotal_0_00">Subtotal: $0.00</string>
    <string name="remove_selected">Remove Selected</string>
    <string name="selected_donuts">Selected Donuts:</string>
    <string name="ordering_sandwiches">ORDERING SANDWICHES</string>
    <string name="breads">Breads:</string>
    <string name="bagel">Bagel</string>
    <string name="wheat_bread">Wheat Bread</string>
    <string name="sour_dough">Sour Dough</string>
    <string name="protein">Protein:</string>
    <string name="beef">Beef</string>
    <string name="fish">Fish</string>
    <string name="chicken">Chicken</string>
    <string name="add_ons">Add-Ons:</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="onions">Onions</string>
    <string name="cheese">Cheese</string>
    <string name="selected_sandwiches">Selected Sandwiches:</string>
    <string name="add_to_selected">Add to Selected</string>
</resources>