<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
            android:id="@+id/addToCartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:onClick="onAddToCartClicked"
            android:layout_alignParentBottom="true"/>

    <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/addToCartButton"
            android:padding="8dp">

        <TextView
                android:id="@+id/subtotalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal_0_00"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_alignParentStart="true"/>

        <Button
                android:id="@+id/removeSelectedItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_selected"
                android:onClick="onRemoveSelectedItemClicked"
                android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <ListView
            android:id="@+id/selectedDonutsListView"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:layout_above="@id/layout"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/donutRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="379dp"
            android:layout_above="@+id/selectedDonut"
            android:layout_alignParentTop="true" android:layout_marginBottom="10dp"/>
    <TextView
            android:text="@string/selected_donuts"
            android:layout_width="155dp"
            android:layout_height="wrap_content" android:id="@+id/selectedDonut"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_above="@+id/selectedDonutsListView" android:layout_marginBottom="5dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="250dp" android:layout_alignParentStart="true"
            android:layout_marginStart="6dp"/>

</RelativeLayout>