<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CurrentOrderCartController">

    <TextView android:id="@+id/topLabel"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:text="@string/current_orders_cart"
              android:textAlignment="center"
              android:textSize="24sp"
              android:textStyle="bold"
              android:layout_marginTop="16dp"
              android:textColor="#b13a3a"
              android:fontFamily="sans-serif-black"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/subTotalLabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/sub_total"
              android:textSize="18sp"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/topLabel"
              android:layout_marginTop="32dp"
              android:layout_marginStart="16dp"/>

    <TextView android:id="@+id/subTotal"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="@+id/subTotalLabel"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/subTotalLabel"/>

    <TextView android:id="@+id/salesTaxLabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/sales_tax"
              android:textSize="18sp"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/subTotal"
              android:layout_marginTop="16dp"
              android:layout_marginStart="16dp"/>

    <TextView android:id="@+id/salesTax"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="@+id/salesTaxLabel"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/salesTaxLabel"/>

    <TextView android:id="@+id/totalLabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/total_amount"
              android:textSize="18sp"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/salesTax"
              android:layout_marginTop="16dp"
              android:layout_marginStart="16dp"/>

    <TextView android:id="@+id/totalAmount"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="@+id/totalLabel"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/totalLabel"/>

    <ListView android:id="@+id/currentOrdersCart"
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_marginTop="25dp"
              app:layout_constraintTop_toBottomOf="@+id/totalAmount"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/removeItemButton"
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"/>

    <Button android:id="@+id/removeItemButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_selected_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentOrdersCart"
            android:layout_marginTop="16dp"/>

    <Button android:id="@+id/placeOrderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/removeItemButton"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>